--- a/index.html
+++ b/index.html
@@ -1,125 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="images/favicon.png">
-
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="lib/icons/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="lib/animate/animate.css">
-    <link rel="stylesheet" href="lib/owlcarousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="lib/animated-headline/animated-headline.css">
-    <link class="color-mode" rel="stylesheet" href="css/styles.css">
-    <link class="color-change" rel="stylesheet" href="css/blue.css">
-    <script src="https://kit.fontawesome.com/bbe98df1ca.js" crossorigin="anonymous"></script>
-
-    <script type='text/javascript'>
-        window.smartlook||(function(d) {
-          var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
-          var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
-          c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
-          })(document);
-          smartlook('init', 'f042c3f7609ee553d1c67f5fa5556fcab1e64c44');
-    </script>
-
-    <title>Alvaro Leandro</title>
-</head>
-
-<body>
-    <!--Preloader-->
-    <div class="load-wrapp">
-        <div class="effect">
-            <p>Álvaro Leandro Cavalcante</p>
-            <div class="bar"></div>
-        </div>
-    </div>
-    <!--.Preloader-->
-
-    <div class="header mobile">
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <h1>Álvaro Leandro Cavalcante</h1>
-    </div>
-    <div class="all">
-        <div class="left-content">
-            <div class="left-scroll">
-                <div class="img-avata">
-                    <img src="images/alvaro.jpeg" alt="avata">
-                </div>
-                <h4 class="title-port">Álvaro Leandro Cavalcante</h4>
-                <ul class="left-nav">
-                    <li><a href="index.html" class="active"><i class="zmdi zmdi-hc-fw"></i><span>Home</span></a></li>
-                    <li><a href="about.html"><i class="zmdi zmdi-hc-fw"></i><span>Sobre</span></a></li>
-                    <li><a href="resume.html"><i class="zmdi zmdi-hc-fw"></i><span>Currículo</span></a></li>
-                    <li><a href="portfolio.html"><i class="zmdi zmdi-hc-fw"></i><span>Portfólio</span></a></li>
-                    <li><a href="blog.html"><i class="zmdi zmdi-hc-fw"></i><span>Blog</span></a></li>
-                    <li><a href="aulas.html"><i class="zmdi zmdi-youtube-play"></i><span>Aulas</span></a></li>
-                    <li><a href="contact.html"><i class="zmdi zmdi-hc-fw"></i><span>Contato</span></a></li>
-                </ul>
-                <div class="footer-box">
-                    <ul class="list-social">
-                        <li><a href="#"><i class="zmdi zmdi-hc-fw"></i></i></a></li>
-                        <li><a href="https://stackoverflow.com/users/8405704/alvaro-leandro-cavalcante" target="blank"><i class="zmdi zmdi-hc-fw">
-                            <i class="zmdi zmdi-stackoverflow"></i></i></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/alvaro-leandro/" target="blank"><i class="zmdi zmdi-hc-fw">
-                            <i class="zmdi zmdi-linkedin-box"></i></i></a></li>
-                        <li><a href="https://github.com/AlvaroCavalcante" target="blank"><i class="zmdi zmdi-hc-fw">
-                            <i class="zmdi zmdi-github-box"></i></i></i></a></li>
-                        <li><a href="https://www.kaggle.com/alvarole" target="blank"><i class="zmdi zmdi-hc-fw">
-                            <i class="fab fa-kaggle"></i></i></i></a></li>
-                    </ul>
-                    <p class="foo-text">2020 © copyright<br>Todos os direitos reservados.</p>
-                </div>
-            </div>
-        </div>
-
-        <div id="home" class="right-content">
-            <div class="right-wrap right-home">
-                <div class="content-home">
-                    <h1>
-                        <span>Seja Bem Vindo !</span>
-                    </h1>
-                    <div class="cd-headline push">
-                        <span style="padding-left:1em">Eu sou</span>
-                        <span class="cd-words-wrapper">
-                            <b class="is-visible">Desenvolvedor</b>
-                            <b>Product Owner</b>
-                            <b>Cientista de Dados</b>
-                        </span>
-                    </div>
-                </div>
-                <div class="overlay-content"></div>
-                <!-- Line Bg Effect -->
-                <div class="line-bg">
-                    <div class="line-item"></div>
-                    <div class="line-item"></div>
-                    <div class="line-item"></div>
-                </div>
-                <!-- .Line Bg Effect -->
-                <div class="image-home">
-                    <img src="images/cello2.jpg" align="bg">
-                </div>  
-            </div>
-        </div>
-    </div>
-
-    <script type="text/javascript" src="lib/jquery.min.js"></script>
-    <script type="text/javascript" src="lib/owlcarousel/owl.carousel.js"></script>
-    <script type="text/javascript" src="lib/bootstrap/js/popper.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="lib/animated-headline/animated-headline.js"></script>
-    <script type="text/javascript" src="lib/youtubebg/jquery.youtubebackground.js"></script>
-    <script type="text/javascript" src="lib/magnific/jquery.magnific-popup.min.js"></script>
-    <script type="text/javascript" src="lib/portfolio/js/isotope.pkgd.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-</body>
-
-</html>
+Hello World
