--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
     <link class="color-change" rel="stylesheet" href="css/blue.css">
     <script src="https://kit.fontawesome.com/bbe98df1ca.js" crossorigin="anonymous"></script>
 
-    <script type='text/javascript'>
-        window.smartlook || (function (d) {
-            var o = smartlook = function () { o.api.push(arguments) }, h = d.getElementsByTagName('head')[0];
-            var c = d.createElement('script'); o.api = new Array(); c.async = true; c.type = 'text/javascript';
-            c.charset = 'utf-8'; c.src = 'https://rec.smartlook.com/recorder.js'; h.appendChild(c);
-        })(document);
-        smartlook('init', 'f042c3f7609ee553d1c67f5fa5556fcab1e64c44');
-    </script>
-
     <title>Felipe Oliveira da Silva</title>
 </head>
 
@@ -39,7 +30,7 @@
             <span></span>
             <span></span>
         </div>
-        <h1>Felipe Oliveira da Silva</h1>
+        <h3>Felipe Oliveira da Silva</h3>
     </div>
     <div class="all">
         <div class="left-content">
@@ -50,24 +41,23 @@
                 <h4 class="title-port">Felipe Oliveira da Silva</h4>
                 <ul class="left-nav">
                     <li><a href="index.html" class="active"><i class="zmdi zmdi-hc-fw"></i><span>Home</span></a></li>
-                    <li><a href="about.html"><i class="zmdi zmdi-hc-fw"></i><span>Sobre</span></a></li>
-                    <li><a href="resume.html"><i class="zmdi zmdi-hc-fw"></i><span>Currículo</span></a></li>
-                    <li><a href="portfolio.html"><i class="zmdi zmdi-hc-fw"></i><span>Portfólio</span></a></li>
+                    <li><a href="about.html"><i class="zmdi zmdi-hc-fw"></i><span>About</span></a></li>
+                    <li><a href="portfolio.html"><i class="zmdi zmdi-hc-fw"></i><span>Portfolio</span></a></li>
                     <li><a href="blog.html"><i class="zmdi zmdi-hc-fw"></i><span>Blog</span></a></li>
-                    <li><a href="contact.html"><i class="zmdi zmdi-hc-fw"></i><span>Contato</span></a></li>
+                    <li><a href="contact.html"><i class="zmdi zmdi-hc-fw"></i><span>Contact</span></a></li>
                 </ul>
                 <div class="footer-box">
                     <ul class="list-social">
                         <li><a href="#"><i class="zmdi zmdi-hc-fw"></i></i></a></li>
                         <i class="zmdi zmdi-stackoverflow"></i></i></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/alvaro-leandro/" target="blank"><i
+                        <li><a href="https://www.linkedin.com/in/felipe-oliveira-da-silva-18a573189/" target="blank"><i
                                     class="zmdi zmdi-hc-fw">
                                     <i class="zmdi zmdi-linkedin-box"></i></i></a></li>
-                        <li><a href="https://github.com/AlvaroCavalcante" target="blank"><i class="zmdi zmdi-hc-fw">
+                        <li><a href="https://github.com/felipeoliverai" target="blank"><i class="zmdi zmdi-hc-fw">
                                     <i class="zmdi zmdi-github-box"></i></i></i></a></li>
 
                     </ul>
-                    <p class="foo-text">2020 © copyright<br>Todos os direitos reservados.</p>
+                    <p class="foo-text">2020 © Copyright<br>All rights reserved.</p>
                 </div>
             </div>
         </div>
