Portfolio and final adjustments

--- a/about.html
+++ b/about.html
@@ -17,7 +17,6 @@
     <link class="color-change" rel="stylesheet" href="css/blue.css">
     <script src="https://kit.fontawesome.com/bbe98df1ca.js" crossorigin="anonymous"></script>
 
-
     <title>Felipe Oliveira da Silva</title>
 </head>
 
@@ -30,7 +29,7 @@
             <span></span>
             <span></span>
         </div>
-        <h1>Felipe Oliveira da Silva</h1>
+        <h3>Felipe Oliveira da Silva</h3>
     </div>
     <div class="all">
         <div class="left-content">
@@ -40,16 +39,13 @@
                 </div>
                 <h4 class="title-port">Felipe Oliveira da Silva</h4>
                 <ul class="left-nav">
-                    <li><a href="index.html" class="active"><i class="zmdi zmdi-hc-fw"></i><span>Home</span></a></li>
-                    <li><a href="about.html"><i class="zmdi zmdi-hc-fw"></i><span>About</span></a></li>
+                    <li><a href="index.html"><i class="zmdi zmdi-hc-fw"></i><span>Home</span></a></li>
+                    <li><a href="about.html" class="active"><i class="zmdi zmdi-hc-fw"></i><span>About</span></a></li>
                     <li><a href="portfolio.html"><i class="zmdi zmdi-hc-fw"></i><span>Portfolio</span></a></li>
-                    <li><a href="blog.html"><i class="zmdi zmdi-hc-fw"></i><span>Blog</span></a></li>
-                    <li><a href="contact.html"><i class="zmdi zmdi-hc-fw"></i><span>Contact</span></a></li>
+                    <li><a href="blog.html"><i class="zmdi zmdi-hc-fw"></i><span>Articles</span></a></li>
                 </ul>
                 <div class="footer-box">
                     <ul class="list-social">
-                        <li><a href="#"><i class="zmdi zmdi-hc-fw"></i></i></a></li>
-                        <i class="zmdi zmdi-stackoverflow"></i></i></i></a></li>
                         <li><a href="https://www.linkedin.com/in/felipe-oliveira-da-silva-18a573189/" target="blank"><i
                                     class="zmdi zmdi-hc-fw">
                                     <i class="zmdi zmdi-linkedin-box"></i></i></a></li>
@@ -57,7 +53,7 @@
                                     <i class="zmdi zmdi-github-box"></i></i></i></a></li>
 
                     </ul>
-                    <p class="foo-text">2020 © copyright<br>Todos os direitos reservados.</p>
+                    <p class="foo-text">2020 © Copyright<br>All rights reserved.</p>
                 </div>
             </div>
         </div>
@@ -166,7 +162,7 @@
                                         <div class="timeline-item">
                                             <span class="date">2022</span>
                                             <span class="position">Database systems engineering</span>
-                                            <a href="https://www.ibilce.unesp.br/#!/pos-graduacao/programas-de-pos-graduacao/ciencia-da-computacao/estudos-especiais/"
+                                            <a href="https://www.fiap.com.br/mba/mba-em-engenharia-de-dados/"
                                                 target="blank">
                                                 <span class="des-pos">FIAP
                                                 </span></a>
@@ -176,8 +172,7 @@
                                         <div class="timeline-item">
                                             <span class="date">2020</span>
                                             <span class="position">Computer Technician</span>
-                                            <a href="https://sites.google.com/fatecpompeia.edu.br/new/home"
-                                                target="blank">
+                                            <a href="https://www.senac.br" target="blank">
                                                 <span class="des-pos">Senac University Center </span></a>
                                         </div>
                                     </li>
