changing in href

--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,7 @@
                                         href="https://medium.com/@felipe.oliveiras2000">Medium</a>
                                 </div>
                                 <div class="content-post">
-                                    <h2><a href="https://medium.com/data-hackers/equaliza%C3%A7%C3%A3o-de-histograma-em-python-378830368d60"
+                                    <h2><a href="https://medium.com/@felipe.oliveiras2000/o-que-%C3%A9-a-intelig%C3%AAncia-artificial-b721a76519d9"
                                             target="blank">O que é a Inteligência Artificial ?(PT-BR)</a></h2>
                                     <div>Um olhar sobre a Inteligência Artificial e o seu potencial disruptivo no
                                         próximos anos.
